# podcast_manager

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 19d6298ccbca_rename_episode_download_path_to_filename.py  204fc5330c86_add_clean_media_url_to_episode_model.py  82774cae0fa8_add_episode_regex_and_auto_refresh_to_.py  967459374b38_add_download_path_to_feed_model.py  ef1b121b0d0f_add_short_name_to_feed_model.py  initial_migration.py
src/: parse_ini_config.py
src/podcast_manager/: __init__.py  cli.py  db.py
src/podcast_manager/downloaders/: __init__.py  episode.py
src/podcast_manager/models/: __init__.py  base.py  episode.py  feed.py  segment.py
src/podcast_manager/parsers/: __init__.py  podcast_dl.py  rss.py  url.py
src/tests/: __init__.py  test_url_cleaner.py
