[project]
name = "podcast-manager"
version = "0.1.0"
description = "Project to manage podcasts and episodes files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "feedparser>=6.0.0",
    "pydub>=0.25.1",
    "requests>=2.28.0",
    "click>=8.1.0",
    "aiohttp>=3.11.13",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "orjson>=3.10.15",
]

[project.scripts]
pcm = "podcast_manager.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/podcast_manager",
    "src/tests",
]
exclude = [
    ".gitignore",
]

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_manager"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules.
select = [
    "E", "F", "W", "B", "I", "AIR", "UP", "YTT", "S", "A", "COM", "C4", "DTZ", "ISC", "G",
    "PIE", "SIM", "TID", "PTH", "TCH", "RSE", "SLF", "TRY", "RUF", "PL", "ARG", "PGH", "PT"
]

ignore = [
    "E501",     # Never enforce `E501` (line length violations)
    "B008",     # Ignore B008 "Do not perform function call {name} in argument defaults"
    "TRY003",   # Ignore TRY003 "Avoid specifying long messages outside the exception class"
    "TRY300",   # Ignore TRY300 "Consider moving this statement to an 'else' block"
    "TRY301",   # Ignore TRY301 "Abstract raise to an inner function"
    "TID252",   # Ignore TID252 "Relative imports from parent modules are banned"
    "PLR"       # Ignore all PLR pylint refactoring
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = [
    "B",
#    "F401",
]

[tool.ruff.lint.per-file-ignores]
# Ignore E402 "Module level import not at top of file" for __init__.py
"__init__.py" = ["E402", "F401"]
# allow asserts, private ._member accesses, and pytest-raises-too-broad
"tests/*" = ["S101", "SLF001", "PT011", "PT009"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

exclude = [
    "build",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.9",
    "types-aiofiles>=24.1.0.20241221",
    "types-requests>=2.32.0.20241016",
    "pytest>=7.0.0",
]
